<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_customers"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/customers" />
        <item
            android:id="@+id/nav_recent"
            android:icon="@drawable/ic_date_range_black_24dp"
            android:title="@string/calendar" />
        <item
            android:id="@+id/nav_catalog"
            android:icon="@drawable/logout"
            android:title="@string/catalog"/>
        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/language"
            android:title="@string/language"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout"/>
    </group>
</menu>