<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_bar"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/options"
        android:icon="@drawable/ic_dots_vertical_white_24dp"
        android:title="@string/options"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/filter"
                android:title="@string/filter"
                app:showAsAction="ifRoom|collapseActionView"/>

            <item
                android:id="@+id/sort"
                android:title="@string/sort"
                app:showAsAction="ifRoom|collapseActionView"/>
            <item
                android:id="@+id/switch_view"
                android:title="@string/show_on_map"
                app:showAsAction="ifRoom|collapseActionView"/>
            <item
                android:id="@+id/refresh"
                android:title="@string/refresh"
                app:showAsAction="ifRoom|collapseActionView"/>
        </menu>
    </item>


</menu>