<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view_group"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <ImageView
        android:id="@+id/item_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/fox_logo"
        android:clickable="false"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginStart="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:layout_marginTop="10dp"
                android:text="@string/price"
                android:textAlignment="viewStart"/>

                <TextView
                    android:id="@+id/item_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:layout_marginTop="10dp"
                    android:text="@string/code"
                    android:textAlignment="viewStart"/>

            <TextView
                android:id="@+id/item_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="30sp"
                android:text="@string/description"
                android:textAlignment="viewStart"/>

            <View style="@style/Divider"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/item_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="30sp"
                android:text="@string/details"
                android:textAlignment="viewStart"/>

            <TextView
                android:id="@+id/item_comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="30sp"
                android:text="@string/comments"
                android:textAlignment="viewStart"/>

        </LinearLayout>

    </ScrollView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>