<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="#343434"
    android:id="@+id/ll_calendar"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp" >

            <ImageButton
                android:id="@+id/ib_prev"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_alignParentStart="true"
                android:background="@drawable/left_arrow"/>

            <TextView
                android:id="@+id/tv_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="Date"
                android:textColor="#4b4a4a"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/Ib_next"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_margin="2dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/righ_arrow"
                tools:ignore="RtlHardcoded" />
    </RelativeLayout>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:background="#ffffff"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:paddingTop="6dp" >

        <TextView
            android:id="@+id/TextView06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sunday_letter"
            android:textColor="#4b4a4a" />

        <TextView
            android:id="@+id/TextView05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/monday_letter"
            android:textColor="#4b4a4a" />

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tuesday_letter"
            android:textColor="#4b4a4a" />

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wensday_letter"
            android:textColor="#4b4a4a" />

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/thursday_letter"
            android:textColor="#4b4a4a" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/friday_letter"
            android:textColor="#4b4a4a" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/saturday_letter"
            android:textColor="#4b4a4a" />

    </TableRow>

    <GridView
        android:id="@+id/gv_calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:cacheColorHint="#ffffff"
        android:gravity="center"
        android:listSelector="@android:color/transparent"
        android:numColumns="7"
        android:padding="2dp"
        android:stretchMode="columnWidth"
        android:textAlignment="gravity" >

    </GridView>

</LinearLayout>